# Vigil-Tech-Issues-Tracker

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  vigil-issue-tracker-requirements.md
tests/: test_aggregate.py  test_classifier.py  test_state.py  test_task_links.py  test_tracker.py
vigil_tracker/: __init__.py  __main__.py  aggregate.py  classifier.py  config.py  factory.py  models.py  scheduler.py  sheets_client.py  slack_client.py  state.py  task_links.py  tracker.py
